--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale; */
   font-family: 'Poppins', sans-serif;
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 code {
