--- a/src/components/Banner1/Banner1.css
+++ b/src/components/Banner1/Banner1.css
@@ -3,8 +3,8 @@
 }
 .banner2{
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 50px;
+    left: 80px;
     color:black;
 }
 .banner-text{
@@ -22,7 +22,10 @@ transform: rotate(-2deg);
 }
 .shp-btn{
     border-radius: 10px;
-    width: 121px;
-height: 50px;
+    width: 150px;
+height: 65px;
+font-size: 20px;
 }
-
+.ylwbtn{
+    padding-top: 30px;
+}
