--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,9 @@ code {
   }
 }
 @media screen and (min-width: 320px) and (max-width:480px){
+  .nav-sym{
+    padding: 10px;
+  }
   .girl1banner{
     display: none;
   }
