--- a/src/components/Banner2/Banner2.css
+++ b/src/components/Banner2/Banner2.css
@@ -16,7 +16,7 @@
 font-size: 5rem ;
 }
 .payday{
-
+    width: fit-content;
     background: #fff;
     transform: matrix(1, -0.03, 0.03, 1, 0, 0);
 }
