--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,19 @@ code {
   .girl1banner{
     display: none;
   }
+  .searchbox-wrap {
+    display: none !important;
+
+  }
+  
 }
 @media screen and (min-width: 320px) and (max-width:480px){
+  .social-icons{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-bottom: 25px;
+  }
   .nav-sym{
     padding: 10px;
   }
@@ -83,10 +94,9 @@ code {
   .textylw{
     position: absolute;
     right: 0;
-    top: 0;
-    padding-right:80px !important;
+    padding-right:25px !important;
     padding-top: 10px !important;
-  
+    top: 22px;
   }
   .banner2-text {
     font-weight: 650 !important;
@@ -99,7 +109,9 @@ code {
   .para-txt{
     font-size: 6px !important;
     padding-top: 0.5rem !important;
+    margin-bottom: 0;
   }
+
   .join{
     font-size: 20px !important;
   }
@@ -136,7 +148,7 @@ code {
 }
 .searchbox-wrap {
   display: flex;
-  width: 370px !important;
+  width: 321px !important;
   margin-left: auto;
   margin-right: auto;
 }
